# grade_reader

./: .gitignore  README.md  aruco.py  aruco_test.py  claude_train.py  full.py  main.py  predict.py  pyproject.toml  test.py  train_model.py
latex/: aruco_2.pdf_tex  first_page.tex  omr.tex
src/: aruco.py  camera.py  getGrade.py  manip.py  mnist.py  mnistmodel.py  mnistpredict.py  sheetmerger.py
